# ByteFrost

./: .clang-format  .gitignore  CMakeLists.txt  Grammar.md  LICENSE  README.md  SEED.md  conanfile.py  conanfile.txt  perma.sh
.github/workflows/: ci.yml  release.yml
include/: ast.h  ast_printer.h  codegen.h  lexer.h  parser.h  version.h.in
include/codegen/: codegen.h
include/errors/: lexer_error.h
include/linker/: linker.h
include/module_resolver/: module_resolver.h
include/parser/: ast.h  parser.h
include/tokenizer/: lexer.h  tokens.h
scripts/: format.sh  test_compiled.sh
src/: main.cpp
src/codegen/: codegen.cpp
src/linker/: linker.cpp  linker_elf.cpp  linker_pe.cpp
src/module_resolver/: module_resolver.cpp
src/orca/: main.cpp
src/parser/: parser.cpp
src/tokenizer/: lexer.cpp  tokens.cpp
test_package/: conanfile.py
tests/: break_continue.bf  codegen_test.cpp  composition.bf  constructor.bf  containers.bf  enum_int_assign.bf  enum_int_compare.bf  enums.bf  fib.bf  hello_world.bf  if_else.bf  lexer_test.cpp  match.bf  operators.bf  parser_test.cpp  struct.bf  trig_function.bf  trig_function_overridden.bf  while_loop.bf
tests/blackjack/: .gitignore  orca.toml
tests/blackjack/src/: blackjack.bf  cards.bf  deck.bf  main.bf
tests/module_example/: orca.toml
tests/module_example/src/: main.bf
tests/module_example/src/geometry/: shapes.bf
tests/null_safety/: .gitignore  orca.toml
tests/null_safety/src/: main.bf
tests/overridden_import_alias/: orca.toml
tests/overridden_import_alias/src/: main.bf
tests/overridden_import_alias/src/math/: utils.bf
tests/overridden_import_direct_negative/: orca.toml
tests/overridden_import_direct_negative/src/: main.bf
tests/overridden_import_direct_negative/src/math/: utils.bf
tests/overridden_import_qualified/: orca.toml
tests/overridden_import_qualified/src/: main.bf
tests/overridden_import_qualified/src/math/: utils.bf
